// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SceneNodeInspectorPanel returns expected elements. SceneNode panel contains expected elements when none selected scene node. 1`] = `
.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 {
  border-bottom: 1px solid colorBorderDividerDefault;
}

.c0 > div:first-child {
  background-color: colorBackgroundContainerHeader;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div>
  <div
    class="c0"
    data-mocked="ExpandableSection"
  >
    <div>
      <div
        class="c1"
      >
        <div
          data-mocked="TextContent"
        >
          <strong>
            Properties
          </strong>
        </div>
      </div>
    </div>
    <div
      data-mocked="Box"
      padding="{\\"left\\":\\"m\\",\\"right\\":\\"m\\",\\"top\\":\\"xxs\\",\\"bottom\\":\\"xxs\\"}"
    >
      <div
        data-mocked="SpaceBetween"
      >
        <div
          data-mocked="TextContent"
        >
          <p>
            No node selected.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SceneNodeInspectorPanel returns expected elements. SceneNode panel contains expected elements when selected scene node. 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  padding-right: 8px;
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 {
  border-bottom: 1px solid colorBorderDividerDefault;
}

.c0 > div:first-child {
  background-color: colorBackgroundContainerHeader;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div>
  <div
    style="overflow: auto;"
  >
    <div
      data-testid="AddComponentMenu"
    >
      [{},{}]
    </div>
    <div
      class="c0"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="c1"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Properties
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{\\"left\\":\\"m\\",\\"right\\":\\"m\\",\\"top\\":\\"xxs\\",\\"bottom\\":\\"xxs\\"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="FormField"
            label="Name"
          >
            <div
              data-mocked="Input"
              data-testid="ip-undefined"
              value="node-name"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="c1"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Transform
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{\\"left\\":\\"m\\",\\"right\\":\\"m\\",\\"top\\":\\"xxs\\",\\"bottom\\":\\"xxs\\"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{\\"bottom\\":\\"xxs\\"}"
            >
              <label
                id="Position_label"
              >
                Position
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{\\"colspan\\":4},{\\"colspan\\":4},{\\"colspan\\":4}]"
            >
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Position_input_X Position_label"
                    controlid="Position_input_X"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Position_input_Y Position_label"
                    controlid="Position_input_Y"
                    data-mocked="Input"
                    disabled=""
                    value="1.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Position_input_Z Position_label"
                    controlid="Position_input_Z"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{\\"bottom\\":\\"xxs\\"}"
            >
              <label
                id="Rotation_label"
              >
                Rotation
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{\\"colspan\\":4},{\\"colspan\\":4},{\\"colspan\\":4}]"
            >
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Rotation_input_X Rotation_label"
                    controlid="Rotation_input_X"
                    data-mocked="Input"
                    value="0.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Rotation_input_Y Rotation_label"
                    controlid="Rotation_input_Y"
                    data-mocked="Input"
                    value="0.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Rotation_input_Z Rotation_label"
                    controlid="Rotation_input_Z"
                    data-mocked="Input"
                    value="0.000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{\\"bottom\\":\\"xxs\\"}"
            >
              <label
                id="Scale_label"
              >
                Scale
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{\\"colspan\\":4},{\\"colspan\\":4},{\\"colspan\\":4}]"
            >
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Scale_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Scale_input_X Scale_label"
                    controlid="Scale_input_X"
                    data-mocked="Input"
                    value="2.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Scale_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Scale_input_Y Scale_label"
                    controlid="Scale_input_Y"
                    data-mocked="Input"
                    value="2.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Scale_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Scale_input_Z Scale_label"
                    controlid="Scale_input_Z"
                    data-mocked="Input"
                    value="2.000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-mocked="FormField"
            label="Constraints"
          >
            <div
              data-mocked="Checkbox"
            >
              Snap to floor
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="c1"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Model Reference
            </strong>
          </div>
          <div
            data-testid="ComponentEditMenu"
          >
            [{"nodeRef":"testNodeRef","currentComponent":{"type":"ModelRef"}},{}]
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{\\"left\\":\\"m\\",\\"right\\":\\"m\\",\\"top\\":\\"xxs\\",\\"bottom\\":\\"xxs\\"}"
      >
        <div
          data-testid="ComponentEditor"
        >
          [{"node":{"ref":"node-ref","properties":{},"childRefs":[],"name":"node-name","transform":{"position":[1,1,1],"rotation":[0,0,0],"scale":[2,2,2]},"transformConstraint":{"snapToFloor":true},"components":[{"type":"ModelRef"}]},"component":{"type":"ModelRef"}},{}]
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SceneNodeInspectorPanel returns expected elements. disable rotation, hide scale and render correct overlay section when selected scene node is Tag with Overlay panel. 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  padding-right: 8px;
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 {
  border-bottom: 1px solid colorBorderDividerDefault;
}

.c0 > div:first-child {
  background-color: colorBackgroundContainerHeader;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div>
  <div
    style="overflow: auto;"
  >
    <div
      data-testid="AddComponentMenu"
    >
      [{},{}]
    </div>
    <div
      class="c0"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="c1"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Properties
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{\\"left\\":\\"m\\",\\"right\\":\\"m\\",\\"top\\":\\"xxs\\",\\"bottom\\":\\"xxs\\"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="FormField"
            label="Name"
          >
            <div
              data-mocked="Input"
              data-testid="ip-undefined"
              value="node-name"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="c1"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Transform
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{\\"left\\":\\"m\\",\\"right\\":\\"m\\",\\"top\\":\\"xxs\\",\\"bottom\\":\\"xxs\\"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{\\"bottom\\":\\"xxs\\"}"
            >
              <label
                id="Position_label"
              >
                Position
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{\\"colspan\\":4},{\\"colspan\\":4},{\\"colspan\\":4}]"
            >
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Position_input_X Position_label"
                    controlid="Position_input_X"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Position_input_Y Position_label"
                    controlid="Position_input_Y"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Position_input_Z Position_label"
                    controlid="Position_input_Z"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{\\"bottom\\":\\"xxs\\"}"
            >
              <label
                id="Rotation_label"
              >
                Rotation
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{\\"colspan\\":4},{\\"colspan\\":4},{\\"colspan\\":4}]"
            >
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Rotation_input_X Rotation_label"
                    controlid="Rotation_input_X"
                    data-mocked="Input"
                    disabled=""
                    value="0.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Rotation_input_Y Rotation_label"
                    controlid="Rotation_input_Y"
                    data-mocked="Input"
                    disabled=""
                    value="0.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Rotation_input_Z Rotation_label"
                    controlid="Rotation_input_Z"
                    data-mocked="Input"
                    disabled=""
                    value="0.000"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="c1"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Tag
            </strong>
          </div>
          <div
            data-testid="ComponentEditMenu"
          >
            [{"nodeRef":"testNodeRef","currentComponent":{"type":"Tag"}},{}]
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{\\"left\\":\\"m\\",\\"right\\":\\"m\\",\\"top\\":\\"xxs\\",\\"bottom\\":\\"xxs\\"}"
      >
        <div
          data-testid="ComponentEditor"
        >
          [{"node":{"ref":"node-ref","properties":{},"childRefs":[],"name":"node-name","transform":{"position":[1,1,1],"rotation":[0,0,0],"scale":[2,2,2]},"transformConstraint":{"snapToFloor":false},"components":[{"type":"Tag"},{"type":"DataOverlay","subType":"OverlayPanel"}]},"component":{"type":"Tag"}},{}]
        </div>
      </div>
    </div>
    <div
      class="c0"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="c1"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Overlay
            </strong>
          </div>
          <div
            data-testid="ComponentEditMenu"
          >
            [{"nodeRef":"testNodeRef","currentComponent":{"type":"DataOverlay","subType":"OverlayPanel"}},{}]
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{\\"left\\":\\"m\\",\\"right\\":\\"m\\",\\"top\\":\\"xxs\\",\\"bottom\\":\\"xxs\\"}"
      >
        <div
          data-testid="ComponentEditor"
        >
          [{"node":{"ref":"node-ref","properties":{},"childRefs":[],"name":"node-name","transform":{"position":[1,1,1],"rotation":[0,0,0],"scale":[2,2,2]},"transformConstraint":{"snapToFloor":false},"components":[{"type":"Tag"},{"type":"DataOverlay","subType":"OverlayPanel"}]},"component":{"type":"DataOverlay","subType":"OverlayPanel"}},{}]
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SceneNodeInspectorPanel returns expected elements. disable rotation, hide scale and render correct overlay section when selected scene node is Tag. 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  padding-right: 8px;
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 {
  border-bottom: 1px solid colorBorderDividerDefault;
}

.c0 > div:first-child {
  background-color: colorBackgroundContainerHeader;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div>
  <div
    style="overflow: auto;"
  >
    <div
      data-testid="AddComponentMenu"
    >
      [{},{}]
    </div>
    <div
      class="c0"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="c1"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Properties
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{\\"left\\":\\"m\\",\\"right\\":\\"m\\",\\"top\\":\\"xxs\\",\\"bottom\\":\\"xxs\\"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="FormField"
            label="Name"
          >
            <div
              data-mocked="Input"
              data-testid="ip-undefined"
              value="node-name"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="c1"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Transform
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{\\"left\\":\\"m\\",\\"right\\":\\"m\\",\\"top\\":\\"xxs\\",\\"bottom\\":\\"xxs\\"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{\\"bottom\\":\\"xxs\\"}"
            >
              <label
                id="Position_label"
              >
                Position
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{\\"colspan\\":4},{\\"colspan\\":4},{\\"colspan\\":4}]"
            >
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Position_input_X Position_label"
                    controlid="Position_input_X"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Position_input_Y Position_label"
                    controlid="Position_input_Y"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Position_input_Z Position_label"
                    controlid="Position_input_Z"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{\\"bottom\\":\\"xxs\\"}"
            >
              <label
                id="Rotation_label"
              >
                Rotation
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{\\"colspan\\":4},{\\"colspan\\":4},{\\"colspan\\":4}]"
            >
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Rotation_input_X Rotation_label"
                    controlid="Rotation_input_X"
                    data-mocked="Input"
                    disabled=""
                    value="0.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Rotation_input_Y Rotation_label"
                    controlid="Rotation_input_Y"
                    data-mocked="Input"
                    disabled=""
                    value="0.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Rotation_input_Z Rotation_label"
                    controlid="Rotation_input_Z"
                    data-mocked="Input"
                    disabled=""
                    value="0.000"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="c1"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Tag
            </strong>
          </div>
          <div
            data-testid="ComponentEditMenu"
          >
            [{"nodeRef":"testNodeRef","currentComponent":{"type":"Tag"}},{}]
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{\\"left\\":\\"m\\",\\"right\\":\\"m\\",\\"top\\":\\"xxs\\",\\"bottom\\":\\"xxs\\"}"
      >
        <div
          data-testid="ComponentEditor"
        >
          [{"node":{"ref":"node-ref","properties":{},"childRefs":[],"name":"node-name","transform":{"position":[1,1,1],"rotation":[0,0,0],"scale":[2,2,2]},"transformConstraint":{"snapToFloor":false},"components":[{"type":"Tag"}]},"component":{"type":"Tag"}},{}]
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SceneNodeInspectorPanel returns expected elements. disable scale and rotation when selected scene node is Annotation. 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  padding-right: 8px;
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 {
  border-bottom: 1px solid colorBorderDividerDefault;
}

.c0 > div:first-child {
  background-color: colorBackgroundContainerHeader;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div>
  <div
    style="overflow: auto;"
  >
    <div
      data-testid="AddComponentMenu"
    >
      [{},{}]
    </div>
    <div
      class="c0"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="c1"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Properties
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{\\"left\\":\\"m\\",\\"right\\":\\"m\\",\\"top\\":\\"xxs\\",\\"bottom\\":\\"xxs\\"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="FormField"
            label="Name"
          >
            <div
              data-mocked="Input"
              data-testid="ip-undefined"
              value="node-name"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="c1"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Transform
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{\\"left\\":\\"m\\",\\"right\\":\\"m\\",\\"top\\":\\"xxs\\",\\"bottom\\":\\"xxs\\"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{\\"bottom\\":\\"xxs\\"}"
            >
              <label
                id="Position_label"
              >
                Position
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{\\"colspan\\":4},{\\"colspan\\":4},{\\"colspan\\":4}]"
            >
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Position_input_X Position_label"
                    controlid="Position_input_X"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Position_input_Y Position_label"
                    controlid="Position_input_Y"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Position_input_Z Position_label"
                    controlid="Position_input_Z"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{\\"bottom\\":\\"xxs\\"}"
            >
              <label
                id="Rotation_label"
              >
                Rotation
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{\\"colspan\\":4},{\\"colspan\\":4},{\\"colspan\\":4}]"
            >
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Rotation_input_X Rotation_label"
                    controlid="Rotation_input_X"
                    data-mocked="Input"
                    disabled=""
                    value="0.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Rotation_input_Y Rotation_label"
                    controlid="Rotation_input_Y"
                    data-mocked="Input"
                    disabled=""
                    value="0.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Rotation_input_Z Rotation_label"
                    controlid="Rotation_input_Z"
                    data-mocked="Input"
                    disabled=""
                    value="0.000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{\\"bottom\\":\\"xxs\\"}"
            >
              <label
                id="Scale_label"
              >
                Scale
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{\\"colspan\\":4},{\\"colspan\\":4},{\\"colspan\\":4}]"
            >
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Scale_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Scale_input_X Scale_label"
                    controlid="Scale_input_X"
                    data-mocked="Input"
                    disabled=""
                    value="2.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Scale_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Scale_input_Y Scale_label"
                    controlid="Scale_input_Y"
                    data-mocked="Input"
                    disabled=""
                    value="2.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Scale_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Scale_input_Z Scale_label"
                    controlid="Scale_input_Z"
                    data-mocked="Input"
                    disabled=""
                    value="2.000"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="c1"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Annotation
            </strong>
          </div>
          <div
            data-testid="ComponentEditMenu"
          >
            [{"nodeRef":"testNodeRef","currentComponent":{"type":"DataOverlay","subType":"TextAnnotation"}},{}]
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{\\"left\\":\\"m\\",\\"right\\":\\"m\\",\\"top\\":\\"xxs\\",\\"bottom\\":\\"xxs\\"}"
      >
        <div
          data-testid="ComponentEditor"
        >
          [{"node":{"ref":"node-ref","properties":{},"childRefs":[],"name":"node-name","transform":{"position":[1,1,1],"rotation":[0,0,0],"scale":[2,2,2]},"transformConstraint":{"snapToFloor":false},"components":[{"type":"DataOverlay","subType":"TextAnnotation"}]},"component":{"type":"DataOverlay","subType":"TextAnnotation"}},{}]
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SceneNodeInspectorPanel returns expected elements. disable y scale when selected scene node is LinearPlane motion indicator. 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  padding-right: 8px;
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 {
  border-bottom: 1px solid colorBorderDividerDefault;
}

.c0 > div:first-child {
  background-color: colorBackgroundContainerHeader;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div>
  <div
    style="overflow: auto;"
  >
    <div
      data-testid="AddComponentMenu"
    >
      [{},{}]
    </div>
    <div
      class="c0"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="c1"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Properties
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{\\"left\\":\\"m\\",\\"right\\":\\"m\\",\\"top\\":\\"xxs\\",\\"bottom\\":\\"xxs\\"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="FormField"
            label="Name"
          >
            <div
              data-mocked="Input"
              data-testid="ip-undefined"
              value="node-name"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="c1"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Transform
            </strong>
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{\\"left\\":\\"m\\",\\"right\\":\\"m\\",\\"top\\":\\"xxs\\",\\"bottom\\":\\"xxs\\"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{\\"bottom\\":\\"xxs\\"}"
            >
              <label
                id="Position_label"
              >
                Position
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{\\"colspan\\":4},{\\"colspan\\":4},{\\"colspan\\":4}]"
            >
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Position_input_X Position_label"
                    controlid="Position_input_X"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Position_input_Y Position_label"
                    controlid="Position_input_Y"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Position_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Position_input_Z Position_label"
                    controlid="Position_input_Z"
                    data-mocked="Input"
                    value="1.000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{\\"bottom\\":\\"xxs\\"}"
            >
              <label
                id="Rotation_label"
              >
                Rotation
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{\\"colspan\\":4},{\\"colspan\\":4},{\\"colspan\\":4}]"
            >
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Rotation_input_X Rotation_label"
                    controlid="Rotation_input_X"
                    data-mocked="Input"
                    value="0.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Rotation_input_Y Rotation_label"
                    controlid="Rotation_input_Y"
                    data-mocked="Input"
                    value="0.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Rotation_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Rotation_input_Z Rotation_label"
                    controlid="Rotation_input_Z"
                    data-mocked="Input"
                    value="0.000"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            data-mocked="Box"
          >
            <div
              data-mocked="Box"
              margin="{\\"bottom\\":\\"xxs\\"}"
            >
              <label
                id="Scale_label"
              >
                Scale
              </label>
            </div>
             
            <div
              data-mocked="Grid"
              griddefinition="[{\\"colspan\\":4},{\\"colspan\\":4},{\\"colspan\\":4}]"
            >
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Scale_input_X"
                    >
                      X
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Scale_input_X Scale_label"
                    controlid="Scale_input_X"
                    data-mocked="Input"
                    value="2.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Scale_input_Y"
                    >
                      Y
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Scale_input_Y Scale_label"
                    controlid="Scale_input_Y"
                    data-mocked="Input"
                    disabled=""
                    value="2.000"
                  />
                </div>
              </div>
              <div
                class="c2"
              >
                <div
                  class="c3"
                >
                  <div
                    data-mocked="TextContent"
                  >
                    <label
                      for="Scale_input_Z"
                    >
                      Z
                    </label>
                     
                  </div>
                </div>
                <div
                  class="c4"
                >
                  <div
                    arialabelledby="Scale_input_Z Scale_label"
                    controlid="Scale_input_Z"
                    data-mocked="Input"
                    value="2.000"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
      data-mocked="ExpandableSection"
    >
      <div>
        <div
          class="c1"
        >
          <div
            data-mocked="TextContent"
          >
            <strong>
              Motion Indicator
            </strong>
          </div>
          <div
            data-testid="ComponentEditMenu"
          >
            [{"nodeRef":"testNodeRef","currentComponent":{"type":"MotionIndicator","shape":"LinearPlane"}},{}]
          </div>
        </div>
      </div>
      <div
        data-mocked="Box"
        padding="{\\"left\\":\\"m\\",\\"right\\":\\"m\\",\\"top\\":\\"xxs\\",\\"bottom\\":\\"xxs\\"}"
      >
        <div
          data-testid="ComponentEditor"
        >
          [{"node":{"ref":"node-ref","properties":{},"childRefs":[],"name":"node-name","transform":{"position":[1,1,1],"rotation":[0,0,0],"scale":[2,2,2]},"transformConstraint":{"snapToFloor":false},"components":[{"type":"MotionIndicator","shape":"LinearPlane"}]},"component":{"type":"MotionIndicator","shape":"LinearPlane"}},{}]
        </div>
      </div>
    </div>
  </div>
</div>
`;
